# jamfpy-python-sdk-jamfpro

./: .gitignore  .pylintrc  AGENTS.md  CHANGELOG.md  COVERAGE.md  EXPANDING.md  Group Creation Test 952792  JSONTEST.json  Master-out.csv  Master.csv  PlaceholderName-1037.xml  PlaceholderName-1038.xml  PlaceholderName-1039.xml  PlaceholderName-1040.xml  PlaceholderName-1188.xml  PlaceholderName-1189.xml  PlaceholderName.xml  README.md  Scep from IMazing.mobileconfig  Test from iMazing JL.mobileconfig  a saved profile.mobileconfig  account_testing.xml  completed_jamf_object.xml  completed_payload_no_jamf.mobileconfig  computer_group.xml  dockitem_testing.xml  downloaded285.mobileconfig  downloaded_complete_jamf_object.xml  downloaded_payload.mobileconfig  json  osx_config_profile_wrapper.xml  out.html  output-classic.csv  output-new.csv  output-pro.csv  output.csv  payload.mobileconfig  policy_payload.xml  policy_payload_2.xml  policy_payload_max.xml  (+17 more)
Debugging/: _poc_template.py  cleanup_policies.py  computer_attachments.py  computer_groups.py  configuration_profiles.py  departments.py  extension_attrs.py  icons.py  policies.py  policies_propogation_basic.py  propogation_timing_policies.py  various.py
PoCs/: _poc_template.py  attachments.py  computer_attachments.py  configuration_profiles.py  departments.py  icons.py  policies.py
api_schemas/: api-reference-url.txt  classic.json  pro.json
jamfpi/: __init__.py
jamfpy/: __init__.py
misc/: endpoint_counter.py  endpoints_to_sheet.py  magic.py  merge_lists.py  one.py  parse_dafydd_readme.py
tests/: api_test.py  auth_test.py  clc_endpoints_accounts_test.py  clc_endpoints_test.py  (+13 more)
(+96 files in other folders)
