[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "jamfpy"
authors = [
    {name = "Joseph Little"},
]
readme = "README.md"
requires-python = ">=3.8"
version = "2.6.0"

dependencies = [
    "requests",
]

[project.optional-dependencies]
pdf = ["ReportLab>=1.2", "RXP"]
rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]

[project.scripts]
my-script = "my_package.module:function"

[tool.setuptools.packages.find]
where = ["."] 
include = ["*"] 
exclude = ["tests*"] 