[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "jamfpy"
authors = [
    {name = "Joseph Little"},
]
readme = "README.md"
requires-python = ">=3.10"
version = "3.0.0"

dependencies = [
    "requests",
]

[project.optional-dependencies]
pdf = ["ReportLab>=1.2", "RXP"]
rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]
test = ["pytest"]

[project.scripts]
my-script = "my_package.module:function"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
# Suite uses the <name>_test.py convention; pytest defaults to test_*.py.
python_files = ["*_test.py"]
testpaths = ["tests"]
pythonpath = ["."]
# Live tests are opt-in only; a CLI `-m integration` overrides this default.
addopts = "-m 'not integration'"
markers = [
    "integration: live min/max lifecycle tests against a real Jamf Pro tenant; deselected by default, run with `pytest -m integration tests/integration`",
]
